--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,8 +69,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/icon/car.png
-    - assets/icon/Ethan.jpg
+    - assets/icons/
+    - assets/sounds/Fart/
+    - assets/sounds/UI/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
