更新 icon 或修正 bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["myappbar"]
+  "cSpell.words": ["myappbar"],
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
